[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phip-server"
version = "0.0.1"
description = "Production reference server for the Physical Information Protocol (PhIP). Implements the v0.1.0-draft spec endpoints over Postgres + filesystem/S3 blob storage."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vincent Casey" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Framework :: FastAPI",
]
dependencies = [
    "phip>=0.1.0a2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
s3 = [
    "aioboto3>=13",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
dev = [
    "phip-server[test,s3]",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
phip-server = "phip_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"alembic/**" = ["E501", "N999"]
# FastAPI's idiomatic Depends(...) lives in argument defaults; the
# Annotated[X, Depends(...)] alternative is uglier and FastAPI's
# own docs use the default form. Ignore B008 in route modules.
"src/phip_server/routes/**" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["alembic.*", "aioboto3", "aioboto3.*"]
ignore_missing_imports = true
